Corrected icons alignment in notification config modal

--- a/public_html/layouts/basic/styles/components/_Utilities.scss
+++ b/public_html/layouts/basic/styles/components/_Utilities.scss
@@ -77,7 +77,7 @@
 }
 
 .u-font-size-44px {
-	font-size: 44px;
+	font-size: calculate-rem(44px);
 }
 //--- MARGIN ---//
 .u-ml-0 {
@@ -85,7 +85,7 @@
 }
 
 .u-ml-10px {
-	margin-left: 10px;
+	margin-left: calculate-rem(10px);
 }
 
 .u-mr-0px {
@@ -97,7 +97,11 @@
 }
 
 .u-mr-5px {
-	margin-right: 5px;
+	margin-right: calculate-rem(5px);
+}
+
+.u-mt-2px {
+	margin-top: calculate-rem(2px);
 }
 
 .u-paragraph-m-0 {
@@ -111,7 +115,7 @@
 }
 
 .u-ml-minus-5px {
-	margin-left: -5px;
+	margin-left: calculate-rem(-5px);
 }
 
 //--- PADDING ---//
